--- a/styles.scss
+++ b/styles.scss
@@ -8,4 +8,220 @@ $grey-200: hsl(0, 0%, 85%);
 body{
   margin: 0;
   padding: 0;
+  position: relative;
+  overflow: scroll;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+h1, p {
+  margin: 0;
+}
+
+.flex{
+  display: flex;
+}
+
+.flex-row{
+  flex-direction: row;
+}
+
+.flex-column{
+  flex-direction: column;
+}
+
+.justify-center{
+  justify-content: center;
+}
+
+.justify-between{
+  justify-content: space-between;
+}
+
+.align-center{
+  align-items: center;
+}
+
+.hidden{
+  display: none;
+}
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
+@mixin breakpoint ( $size ){
+  @if $size == tablet{
+    @media screen and (min-width: 48em) {
+      @content;
+    }
+  }
+  @else if $size == desktop{
+    @media screen and (min-width: 62em) {
+      @content;
+    }
+  }
+}
+
+@mixin font-type ($type) {
+  @if $type == heading{
+    font-family: $font-josefin;
+    text-transform: uppercase;
+    font-weight: 100;
+  }
+  @else if $type == normaltext{
+    font-family: $font-alata;
+  }
+}
+
+@mixin img-size ($size) {
+  width: $size;
+}
+
+@mixin navi-link {
+  color: $white;
+  text-decoration: none;
+}
+
+.web-navi{
+  background-color: transparent;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin-block: 2.5em;
+  margin-inline: 1.4em;
+  z-index: 2;
+
+  @include breakpoint(tablet){
+    margin-inline: 2.8em;
+  }
+
+  @include breakpoint(desktop){
+    margin-block: 3.7em;
+    margin-inline: 10.2em;
+  }
+
+  .logo{
+    @include img-size(9.4em);
+    @include breakpoint(desktop){
+      width: initial;
+    }
+  }
+
+  #navi-open-btn{
+    @include breakpoint(desktop){
+      display: none;
+    }
+  }
+
+  .navi-list{
+    display: none;
+    column-gap: 1.8em;
+    @include breakpoint(desktop){
+      display: flex;
+    }
+
+    .navi-link{
+      padding-block: 1em;
+      // border-bottom: 3px solid transparent;
+      @include navi-link;
+      @include font-type(normaltext);
+      position: relative;
+
+      &::after{
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        height: 3px;
+        width: 0;
+        background-color: $white;
+        transform: translateX(-50%);
+      }
+
+      &:hover::after{
+        // border-bottom-color: $white;
+        width: 50%;
+      }
+    }
+  }
+}
+
+#navi-wrapper-mobile{
+  z-index: 5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: $black;
+  padding-inline: 1.3em;
+  padding-block: 2.5em;
+  row-gap: 10em;
+  @include breakpoint(tablet){
+    padding-inline: 2.8em;
+  }
+
+  div{
+    &>img:first-child{
+      @include img-size(9.4em);
+    }
+  }
+
+  .navi-list-mobile{
+    row-gap: 1.5em;
+    &>a{
+      @include navi-link;
+      @include font-type(heading);
+      font-size: 1.5em;
+    }
+  }
+}
+
+main{
+  .hero-section{
+    position: relative;
+
+    .hero-section-img{
+      width: 100%; 
+      object-fit: contain;
+      @include breakpoint(tablet){
+        content: url('../images/desktop/image-hero.jpg');
+      }
+      @include breakpoint(desktop){
+        content: url('../images/desktop/image-hero.jpg');
+      }
+    }
+
+    .hero-section-header{
+      position: absolute;
+      top: 55%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border: 2px solid $white;
+      padding: 20px 25px;
+
+      @include breakpoint(desktop) {
+        transform: translate(0, -50%);
+        left: 10.2em;
+        max-width: 35em;
+        padding: 30px 35px;
+      }
+
+      h1{
+        @include font-type(heading);
+        color: $white;
+        font-size: 2.4em;
+        @include breakpoint(desktop){
+          font-size: 4.6em;
+        }
+      }
+    }
+  }
 }
