--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,5 @@
+$image-ids: image-deep-earth, image-night-arcade, image-soccer-team, image-grid, image-from-above, image-pocket-borealis, image-curiosity, image-fisheye;
+
 $font-alata: 'Alata', sans-serif;
 $font-josefin: 'Josefin Sans', sans-serif;
 
@@ -253,6 +255,7 @@ main{
         margin-block-end: 1em;
         @include breakpoint(desktop){
           width: 45em;
+          content: url('../images/desktop/image-interactive.jpg');
         }
       }
 
@@ -264,7 +267,9 @@ main{
           left: 51%;
           background-color: $white;
           padding-inline-start: 6.5em;
-          padding-block: 4em;
+          padding-inline-end: 1.5em;
+          padding-block-start: 4em;
+          padding-block-end: 1em;
         }
 
         &>*{
@@ -293,22 +298,100 @@ main{
     }
 
     .creations-wrapper{
-      
+      margin-block-end: 6em;
+      grid-template-rows: repeat(3, auto);
+      @include breakpoint(tablet){
+        grid-template-rows: repeat(2, auto);
+        grid-template-columns: repeat(2, auto);
+        margin-block-end: 8em;
+      }
 
-      h2{
+      .creations-list-header{
+        grid-area: 1;
         @include font-type(heading);
         font-weight: 300;
         font-size: 2em;
         text-align: center;
+        margin-block-start: 0;
+        margin-block-end: 1.5em;
+        @include breakpoint(tablet){
+          grid-area: 1 / 1 / 2 / 2;
+          text-align: left;
+        }
+        @include breakpoint(desktop){
+          font-size: 3em;
+        }
+      }
+
+      .btn-wrapper{
+        grid-area: 3;
+        @include breakpoint(tablet){
+          grid-area: 1 / 2 / 2 / 3;
+          justify-content: end;
+          align-items: start;
+        }
+
+        #see-all-btn{
+          padding: 0.7em 3em;
+          border: 1px solid $black;
+          background-color: $white;
+          @include font-type(normaltext);
+          font-size: 0.8em;
+          font-weight: 300;
+          text-transform: uppercase;
+          letter-spacing: 5px;
+        }
       }
 
       .creations-list{
+        grid-template-rows: repeat(8, auto);
+        grid-area: 2;
+        gap: 1em;
+        margin-block-end: 2em;
+        @include breakpoint(tablet){
+          grid-area: 2 / 1 / 3 / 3;
+        }
+        @include breakpoint(desktop){
+          grid-template-columns: repeat(4, auto);
+          grid-template-rows: repeat(2, auto);
+          gap: 1.5em;
+        }
+
         figure{
+          position: relative;
+          @include breakpoint(desktop){
+            @each $id in $image-ids{
+              ##{$id} {
+                content: url('../images/desktop/#{$id}.jpg');
+              }
+            }
+          }
           img{
             width: 100%;
+          }
+
+          span{
+            position: absolute;
+            left: 20px;
+            bottom: 20px;
+            @include font-type(heading);
+            color: $white;
+            font-size: 1.5em;
+            font-weight: 300;
+            width: 140px;
+            
+            @include breakpoint(tablet){
+              font-size: 2.5em;
+              width: 220px;
+            }
           }
         }
       }
     }
   }
+}
+
+footer{
+  background-color: $black;
+  color: $white;
 }
