--- a/styles/styles.css
+++ b/styles/styles.css
@@ -225,6 +225,7 @@ main .main-content-container .info-wrapper img {
 @media screen and (min-width: 62em) {
   main .main-content-container .info-wrapper img {
     width: 45em;
+    content: url("../images/desktop/image-interactive.jpg");
   }
 }
 main .main-content-container .info-wrapper .info-content-wrapper {
@@ -237,7 +238,9 @@ main .main-content-container .info-wrapper .info-content-wrapper {
     left: 51%;
     background-color: hsl(0, 0%, 100%);
     padding-inline-start: 6.5em;
-    padding-block: 4em;
+    padding-inline-end: 1.5em;
+    padding-block-start: 4em;
+    padding-block-end: 1em;
   }
 }
 main .main-content-container .info-wrapper .info-content-wrapper > * {
@@ -266,14 +269,129 @@ main .main-content-container .info-wrapper .info-content-wrapper p {
   color: hsl(0, 0%, 50%);
   line-height: 1.75;
 }
-main .main-content-container .creations-wrapper h2 {
+main .main-content-container .creations-wrapper {
+  margin-block-end: 6em;
+  grid-template-rows: repeat(3, auto);
+}
+@media screen and (min-width: 48em) {
+  main .main-content-container .creations-wrapper {
+    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(2, auto);
+    margin-block-end: 8em;
+  }
+}
+main .main-content-container .creations-wrapper .creations-list-header {
+  grid-area: 1;
   font-family: "Josefin Sans", sans-serif;
   text-transform: uppercase;
   font-weight: 100;
   font-weight: 300;
   font-size: 2em;
   text-align: center;
+  margin-block-start: 0;
+  margin-block-end: 1.5em;
+}
+@media screen and (min-width: 48em) {
+  main .main-content-container .creations-wrapper .creations-list-header {
+    grid-area: 1/1/2/2;
+    text-align: left;
+  }
+}
+@media screen and (min-width: 62em) {
+  main .main-content-container .creations-wrapper .creations-list-header {
+    font-size: 3em;
+  }
+}
+main .main-content-container .creations-wrapper .btn-wrapper {
+  grid-area: 3;
+}
+@media screen and (min-width: 48em) {
+  main .main-content-container .creations-wrapper .btn-wrapper {
+    grid-area: 1/2/2/3;
+    justify-content: end;
+    align-items: start;
+  }
+}
+main .main-content-container .creations-wrapper .btn-wrapper #see-all-btn {
+  padding: 0.7em 3em;
+  border: 1px solid hsl(0, 0%, 0%);
+  background-color: hsl(0, 0%, 100%);
+  font-family: "Alata", sans-serif;
+  font-size: 0.8em;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+main .main-content-container .creations-wrapper .creations-list {
+  grid-template-rows: repeat(8, auto);
+  grid-area: 2;
+  gap: 1em;
+  margin-block-end: 2em;
+}
+@media screen and (min-width: 48em) {
+  main .main-content-container .creations-wrapper .creations-list {
+    grid-area: 2/1/3/3;
+  }
+}
+@media screen and (min-width: 62em) {
+  main .main-content-container .creations-wrapper .creations-list {
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(2, auto);
+    gap: 1.5em;
+  }
+}
+main .main-content-container .creations-wrapper .creations-list figure {
+  position: relative;
+}
+@media screen and (min-width: 62em) {
+  main .main-content-container .creations-wrapper .creations-list figure #image-deep-earth {
+    content: url("../images/desktop/image-deep-earth.jpg");
+  }
+  main .main-content-container .creations-wrapper .creations-list figure #image-night-arcade {
+    content: url("../images/desktop/image-night-arcade.jpg");
+  }
+  main .main-content-container .creations-wrapper .creations-list figure #image-soccer-team {
+    content: url("../images/desktop/image-soccer-team.jpg");
+  }
+  main .main-content-container .creations-wrapper .creations-list figure #image-grid {
+    content: url("../images/desktop/image-grid.jpg");
+  }
+  main .main-content-container .creations-wrapper .creations-list figure #image-from-above {
+    content: url("../images/desktop/image-from-above.jpg");
+  }
+  main .main-content-container .creations-wrapper .creations-list figure #image-pocket-borealis {
+    content: url("../images/desktop/image-pocket-borealis.jpg");
+  }
+  main .main-content-container .creations-wrapper .creations-list figure #image-curiosity {
+    content: url("../images/desktop/image-curiosity.jpg");
+  }
+  main .main-content-container .creations-wrapper .creations-list figure #image-fisheye {
+    content: url("../images/desktop/image-fisheye.jpg");
+  }
 }
 main .main-content-container .creations-wrapper .creations-list figure img {
   width: 100%;
+}
+main .main-content-container .creations-wrapper .creations-list figure span {
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+  font-weight: 100;
+  color: hsl(0, 0%, 100%);
+  font-size: 1.5em;
+  font-weight: 300;
+  width: 140px;
+}
+@media screen and (min-width: 48em) {
+  main .main-content-container .creations-wrapper .creations-list figure span {
+    font-size: 2.5em;
+    width: 220px;
+  }
+}
+
+footer {
+  background-color: hsl(0, 0%, 0%);
+  color: hsl(0, 0%, 100%);
 }/*# sourceMappingURL=styles.css.map */
