--- a/styles.scss
+++ b/styles.scss
@@ -391,7 +391,52 @@ main{
   }
 }
 
-footer{
+.footer{
   background-color: $black;
   color: $white;
+  padding-block: 3em;
+  @include breakpoint(desktop){
+    flex-direction: row;
+    padding-inline: 10.4em;
+    justify-content: space-between;
+  }
+
+  &>div:first-child{
+    @include breakpoint(desktop){
+      align-items: start;
+    }
+    .footer-logo{
+      @include img-size(9.4em);
+    }
+
+    .footer-navi{
+      margin-block: 2em;
+      row-gap: 1.5em;
+      @include breakpoint(desktop){
+        flex-direction: row;
+        column-gap: 2em;
+      }
+
+      .footer-navi-link{
+        color: $grey-200;
+        text-decoration: none;
+        @include font-type(normaltext);
+      }
+    }
+  }
+
+  &>div:last-child{
+    @include breakpoint(desktop){
+      align-items: end;
+    }
+    .social-links-list{
+      margin-block: 1em;
+      column-gap: 1em;
+    }
+
+    .copyright{
+      color: $grey-500;
+      @include font-type(normaltext);
+    }
+  }
 }
