--- a/styles.scss
+++ b/styles.scss
@@ -94,6 +94,22 @@ h1, p, figure {
   color: $white;
   text-decoration: none;
 }
+@mixin link-underline {
+  &::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    height: 3px;
+    width: 0;
+    background-color: $white;
+    transform: translateX(-50%);
+  }
+
+  &:hover::after{
+    width: 50%;
+  }
+}
 
 .web-navi{
   background-color: transparent;
@@ -136,26 +152,10 @@ h1, p, figure {
 
     .navi-link{
       padding-block: 1em;
-      // border-bottom: 3px solid transparent;
       @include navi-link;
       @include font-type(normaltext);
       position: relative;
-
-      &::after{
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        height: 3px;
-        width: 0;
-        background-color: $white;
-        transform: translateX(-50%);
-      }
-
-      &:hover::after{
-        // border-bottom-color: $white;
-        width: 50%;
-      }
+      @include link-underline;
     }
   }
 }
@@ -340,6 +340,11 @@ main{
           font-weight: 300;
           text-transform: uppercase;
           letter-spacing: 5px;
+
+          &:hover{
+            background-color: $black;
+            color: $white;
+          }
         }
       }
 
@@ -385,6 +390,15 @@ main{
               width: 220px;
             }
           }
+
+          &:hover{
+            img{
+              opacity: 0.3;
+            }
+            span{
+              color: $black;
+            }
+          }
         }
       }
     }
@@ -395,6 +409,7 @@ main{
   background-color: $black;
   color: $white;
   padding-block: 3em;
+  row-gap: 1em;
   @include breakpoint(desktop){
     flex-direction: row;
     padding-inline: 10.4em;
@@ -402,36 +417,49 @@ main{
   }
 
   &>div:first-child{
+    row-gap: 1em;
+    margin-block-end: 1.5em;
     @include breakpoint(desktop){
       align-items: start;
+      margin-block-end: 0;
     }
     .footer-logo{
       @include img-size(9.4em);
     }
 
     .footer-navi{
-      margin-block: 2em;
-      row-gap: 1.5em;
+      // row-gap: 1.5em;
       @include breakpoint(desktop){
         flex-direction: row;
         column-gap: 2em;
       }
 
       .footer-navi-link{
+        padding-block: 1em;
+        position: relative;
         color: $grey-200;
         text-decoration: none;
         @include font-type(normaltext);
+        @include link-underline;
       }
     }
   }
 
   &>div:last-child{
+    row-gap: 1.5em;
     @include breakpoint(desktop){
       align-items: end;
     }
     .social-links-list{
-      margin-block: 1em;
       column-gap: 1em;
+
+      .social-link{
+        padding-block-end: 0.5em;
+        border-bottom: 3px solid transparent;
+        &:hover{
+          border-bottom-color: $white;
+        }
+      }
     }
 
     .copyright{
