Break down styles.scss file

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,12 +1,6 @@
-$image-ids: image-deep-earth, image-night-arcade, image-soccer-team, image-grid, image-from-above, image-pocket-borealis, image-curiosity, image-fisheye;
-
-$font-alata: 'Alata', sans-serif;
-$font-josefin: 'Josefin Sans', sans-serif;
-
-$white: hsl(0, 0%, 100%);
-$black: hsl(0, 0%, 0%);
-$grey-200: hsl(0, 0%, 85%);
-$grey-500: hsl(0, 0%, 50%);
+@import './variables-and-mixins';
+@import './navigation';
+@import './footer';
 
 body{
   margin: 0;
@@ -60,135 +54,6 @@ h1, p, figure {
 
 .cursor-pointer{
   cursor: pointer;
-}
-
-@mixin breakpoint ( $size ){
-  @if $size == tablet{
-    @media screen and (min-width: 48em) {
-      @content;
-    }
-  }
-  @else if $size == desktop{
-    @media screen and (min-width: 62em) {
-      @content;
-    }
-  }
-}
-
-@mixin font-type ($type) {
-  @if $type == heading{
-    font-family: $font-josefin;
-    text-transform: uppercase;
-    font-weight: 100;
-  }
-  @else if $type == normaltext{
-    font-family: $font-alata;
-  }
-}
-
-@mixin img-size ($size) {
-  width: $size;
-}
-
-@mixin navi-link {
-  color: $white;
-  text-decoration: none;
-}
-@mixin link-underline {
-  &::after{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    height: 3px;
-    width: 0;
-    background-color: $white;
-    transform: translateX(-50%);
-  }
-
-  &:hover::after{
-    width: 50%;
-  }
-}
-
-.web-navi{
-  background-color: transparent;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  margin-block: 2.5em;
-  margin-inline: 1.4em;
-  z-index: 2;
-
-  @include breakpoint(tablet){
-    margin-inline: 2.8em;
-  }
-
-  @include breakpoint(desktop){
-    margin-block: 3.7em;
-    margin-inline: 10.2em;
-  }
-
-  .logo{
-    @include img-size(9.4em);
-    @include breakpoint(desktop){
-      width: initial;
-    }
-  }
-
-  #navi-open-btn{
-    @include breakpoint(desktop){
-      display: none;
-    }
-  }
-
-  .navi-list{
-    display: none;
-    column-gap: 1.8em;
-    @include breakpoint(desktop){
-      display: flex;
-    }
-
-    .navi-link{
-      padding-block: 1em;
-      @include navi-link;
-      @include font-type(normaltext);
-      position: relative;
-      @include link-underline;
-    }
-  }
-}
-
-#navi-wrapper-mobile{
-  z-index: 5;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: $black;
-  padding-inline: 1.3em;
-  padding-block: 2.5em;
-  row-gap: 10em;
-  @include breakpoint(tablet){
-    padding-inline: 2.8em;
-  }
-
-  div{
-    &>img:first-child{
-      @include img-size(9.4em);
-    }
-  }
-
-  .navi-list-mobile{
-    row-gap: 1.5em;
-    &>a{
-      @include navi-link;
-      @include font-type(heading);
-      font-size: 1.5em;
-    }
-  }
 }
 
 main{
@@ -401,70 +266,6 @@ main{
           }
         }
       }
-    }
-  }
-}
-
-.footer{
-  background-color: $black;
-  color: $white;
-  padding-block: 3em;
-  row-gap: 1em;
-  @include breakpoint(desktop){
-    flex-direction: row;
-    padding-inline: 10.4em;
-    justify-content: space-between;
-  }
-
-  &>div:first-child{
-    row-gap: 1em;
-    margin-block-end: 1.5em;
-    @include breakpoint(desktop){
-      align-items: start;
-      margin-block-end: 0;
-    }
-    .footer-logo{
-      @include img-size(9.4em);
-    }
-
-    .footer-navi{
-      // row-gap: 1.5em;
-      @include breakpoint(desktop){
-        flex-direction: row;
-        column-gap: 2em;
-      }
-
-      .footer-navi-link{
-        padding-block: 1em;
-        position: relative;
-        color: $grey-200;
-        text-decoration: none;
-        @include font-type(normaltext);
-        @include link-underline;
-      }
-    }
-  }
-
-  &>div:last-child{
-    row-gap: 1.5em;
-    @include breakpoint(desktop){
-      align-items: end;
-    }
-    .social-links-list{
-      column-gap: 1em;
-
-      .social-link{
-        padding-block-end: 0.5em;
-        border-bottom: 3px solid transparent;
-        &:hover{
-          border-bottom-color: $white;
-        }
-      }
-    }
-
-    .copyright{
-      color: $grey-500;
-      @include font-type(normaltext);
     }
   }
 }
